--- a/requirements.txt
+++ b/requirements.txt
@@ -79,11 +79,16 @@ pydantic==2.10.4
     # via
     #   -r requirements.in
     #   fastapi
+    #   pydantic-settings
     #   weaviate-client
 pydantic-core==2.27.2
     # via pydantic
+pydantic-settings==2.7.1
+    # via -r requirements.in
 pytest==8.3.4
     # via -r requirements.in
+python-dotenv==1.0.1
+    # via pydantic-settings
 sniffio==1.3.1
     # via anyio
 sqlalchemy==2.0.36
